--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,9 @@
-*{
+body{
     overflow:hidden;
 }
 
-#__ninp{
-    position:absolute;
-    visibility: hidden;
-    width:100%;
-    height:100%;
+canvas{
+
+    padding:0;
+
 }
